# Peam-ssz

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: publish.yml
benches/: fixtures.rs  peam_differential.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_robustness.rs  diff_header.rs  diff_list_u64.rs
scripts/: publish-if-needed.sh
spec-tests/: Cargo.toml  download-vectors.sh
spec-tests/src/: loader.rs
spec-tests/tests/: ssz_generic.rs  ssz_static_mainnet.rs  ssz_static_minimal.rs
src/: lib.rs  unsafe_vec.rs
src/ssz/: hash.rs  mod.rs  primitives.rs
src/types/: beacon.rs  bitlist.rs  bytes.rs  collections.rs  container.rs  mod.rs  progressive.rs
