[package]
name = "peam-ssz-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
peam-ssz = { path = ".." }
libssz = { path = "../../libssz/crates/ssz" }
libssz-types = { path = "../../libssz/crates/ssz-types" }
libssz-merkle = { path = "../../libssz/crates/ssz-merkle" }
libssz-derive = { path = "../../libssz/crates/ssz-derive" }

[workspace]
members = ["."]

[[bin]]
name = "decode_robustness"
path = "fuzz_targets/decode_robustness.rs"
doc = false

[[bin]]
name = "diff_header"
path = "fuzz_targets/diff_header.rs"
doc = false

[[bin]]
name = "diff_list_u64"
path = "fuzz_targets/diff_list_u64.rs"
doc = false
